--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,3 +9,25 @@ appTitle=SSC Alocation
 appDescription=SSC Alocation
 #XTIT: Main view title
 title=SSC Alocation
+consultant=Consultant
+planeado=Planeado
+real=Real
+va=V&A
+nonAllocated=Non-allocated
+totalReal=Total Real
+balance=Balance
+year=Year
+matrizSSC=Matriz SSC
+
+january=January
+february=February
+march=March
+april=April
+may=May
+june=June
+july=July
+august=August
+september=September
+october=October
+november=November
+december=December
