--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,14 +10,14 @@ appDescription=SSC Alocation
 #XTIT: Main view title
 title=SSC Alocation
 consultant=Consultant
-planeado=Planeado
+planeado=Planned
 real=Real
 va=V&A
-nonAllocated=Non-allocated
+nonAllocated=Non-Allocated
 totalReal=Total Real
 balance=Balance
 year=Year
-matrizSSC=Matriz SSC
+matrizSSC=SSC Alocation
 
 january=January
 february=February
@@ -31,3 +31,4 @@ september=September
 october=October
 november=November
 december=December
+month=Month
